# tickflow-assist

./: .gitignore  .npmignore  AGENTS.md  CHANGELOG.md  README.md  RELEASE_CHECKLIST.md  RELEASE_STATUS.md  config.yaml  day_future.txt  local.config.example.json  openclaw.plugin.json  package-lock.json  package.json  pyproject.toml  requirements.txt  setup-tickflow.sh  tsconfig.json
.github/workflows/: publish-npm.yml
docs/: installation-and-usage.md  installation.md  usage.md
packaging/: README.clawhub.md
python/: indicator_runner.py  indicators.py  pyproject.toml  requirements.txt
scripts/: add_stock.py  analyze.py  clean-dist.mjs  fetch_klines.py  init_scheduler.py  list_watchlist.py  monitor_status.py  prepare-package-assets.mjs  realtime_monitor.py  remove_stock.py  restore-package-assets.mjs  start_monitor.py  stop_monitor.py  test_alert.py  update_all.py  view_analysis.py
skills/database-query/: SKILL.md
skills/stock-analysis/: SKILL.md
skills/usage-help/: SKILL.md
src/: __init__.py  alert.py  analyzer.py  bootstrap.ts  calendar.py  config.py  db.py  indicators.py  monitor.py  plugin-commands.ts  plugin-registration.test.ts  plugin.ts  scheduler.py  tickflow_api.py  validators.py
src/background/: daily-update.worker.test.ts  daily-update.worker.ts  jin10-flash.worker.ts  realtime-monitor.worker.ts
src/config/: env.ts  normalize.ts  schema.ts  tickflow-access.ts
src/constants/: market-indexes.ts
src/dev/: render-alert-card-demo.ts  run-daily-update-loop.ts  run-monitor-loop.ts  run-tool.ts  tickflow-assist-cli.ts  validate-mx-search.ts
(+145 files in other folders)
