[project]
name = "tickflow-assist"
version = "0.1.0"
description = "TickFlow stock analysis plugin for OpenClaw."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31",
  "pyyaml>=6.0",
  "lancedb>=0.6",
  "pyarrow>=14.0",
  "pandas>=2.0",
  "numpy>=1.24",
  "openai>=1.0",
  "ta>=0.11",
]

[tool.uv]
package = false
